--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "@types/cheerio": "^0.22.35",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "@types/valid-url": "^1.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "valid-url": "^1.0.9"
   }
 }
