--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,16 +14,11 @@
   ],
   "author": "Elowen",
   "license": "ISC",
-  "devDependencies": {
-    "@types/cheerio": "^0.22.35",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.0",
-    "@types/valid-url": "^1.0.7",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
-  },
   "dependencies": {
+    "@extractus/article-extractor": "^8.0.4",
+    "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
+    "puppeteer": "^21.5.2",
     "valid-url": "^1.0.9"
   }
 }
