--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
     "puppeteer": "^21.5.2",
+    "sharp": "^0.33.0",
     "valid-url": "^1.0.9"
   }
 }
