--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["cnbeta", "extractus", "mydrivers", "techweb"]
+  "cSpell.words": ["cnbeta", "extractus", "mydrivers", "techweb", "zhuanzai"]
 }
